--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "5hqhhw--run",
+  "name": "rampup-ui--run",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
@@ -16,13 +16,15 @@
     "@progress/kendo-angular-buttons": "6.4.1",
     "@progress/kendo-angular-common": "2.0.2",
     "@progress/kendo-angular-dateinputs": "5.3.0",
-    "@progress/kendo-angular-dropdowns": "5.5.0",
+    "@progress/kendo-angular-dialog": "^5.2.1",
+    "@progress/kendo-angular-dropdowns": "^5.5.0",
     "@progress/kendo-angular-excel-export": "4.0.2",
     "@progress/kendo-angular-grid": "5.4.3",
     "@progress/kendo-angular-inputs": "7.5.1",
     "@progress/kendo-angular-intl": "3.1.2",
     "@progress/kendo-angular-l10n": "3.0.3",
     "@progress/kendo-angular-label": "3.1.1",
+    "@progress/kendo-angular-notification": "^3.0.3",
     "@progress/kendo-angular-pdf-export": "3.0.2",
     "@progress/kendo-angular-popup": "4.0.2",
     "@progress/kendo-angular-treeview": "5.4.2",
