complete update,file-uplad

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@progress/kendo-angular-dropdowns": "^5.5.0",
     "@progress/kendo-angular-excel-export": "4.0.2",
     "@progress/kendo-angular-grid": "5.4.3",
+    "@progress/kendo-angular-indicators": "^1.1.1",
     "@progress/kendo-angular-inputs": "7.5.1",
     "@progress/kendo-angular-intl": "3.1.2",
     "@progress/kendo-angular-l10n": "3.0.3",
@@ -28,12 +29,14 @@
     "@progress/kendo-angular-pdf-export": "3.0.2",
     "@progress/kendo-angular-popup": "4.0.2",
     "@progress/kendo-angular-treeview": "5.4.2",
+    "@progress/kendo-angular-upload": "^7.1.4",
     "@progress/kendo-data-query": "1.5.5",
     "@progress/kendo-drawing": "1.15.0",
     "@progress/kendo-licensing": "1.2.1",
     "apollo-angular": "^2.6.0",
     "core-js": "2.6.12",
     "graphql": "15.5.0",
+    "moment": "^2.29.1",
     "rxjs": "6.6.7",
     "tslib": "1.14.1",
     "web-animations-js": "2.3.2",
