--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@angular/cli": "~12.2.13",
     "@angular/compiler-cli": "~12.2.13",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^12.20.36",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
@@ -63,6 +64,7 @@
     "karma": "~6.3.7",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
