--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "module": "esnext",
+    "types": ["node", "jest"],
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
@@ -17,6 +18,6 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   }
 }
